--- a/css/style.css
+++ b/css/style.css
@@ -691,11 +691,12 @@ span {
 @media (max-width: 768px) {
     #menu-icon{
         display: block;
+        margin-right: 14%;        
     }
 
     #darkMode-icon {
         position: absolute;
-        right: 7rem;
+        right: 23%;
         font-size: 2.6rem;
         color: var(--text-color);
         margin-bottom: 1rem;
